Updates sign up success page, and moves the footer out of the homepage into its own component. Also wraps the entire app in a div with a class of 'body' in order to ensure proper placement of the footer

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -6,6 +6,10 @@
  * Made By MaterializeCSS.com
  */
 
+ .body {
+  min-height: 81vh;
+ }
+
  .full-width {
   width: 100%;
  }
